@@ -1,3 +1,8 @@
+2005-03-28 19:47  antirez
+
+	* ChangeLog, jim.c, test.tcl: The behaviour of [scope] modified a
+	  bit. Test updated accordingly.
+
 2005-03-28 18:57  antirez
 
 	* ChangeLog, jim.c, test.tcl: [scope] command + tests
